--- a/index.html
+++ b/index.html
@@ -15,13 +15,32 @@
         <!-- Custom Styles -->
         <style type="text/tailwindcss">
             @theme {
-              --color-clifford: #da373d;
+              --color-carmine-pink: #da373d;
               --font-inter: "Inter", serif;
+            }
+            .nav-link {
+                @apply px-5 py-2 hover:bg-carmine-pink rounded-4xl transition-colors duration-500 cursor-pointer;
+            }
+            .container {
+                @apply max-w-[90rem] mx-auto;
             }
           </style>
 	</head>
-	<body class="font-inter">
-        <header></header>
+	<body class="font-inter bg-black">
+        <header class="container bg-gradient-to-b from-[#111111] to-[rgba(119,119,119, 0)]">
+            <!-- Navbar Start -->
+            <nav class="flex justify-between items-center px-5 py-12 md:px-8 lg:px-20 xl:px-48 xl:py-14">
+                <h2 class="text-4xl text-carmine-pink italic font-extrabold cursor-pointer">Fitness</h2>
+                <ul class="hidden sm:flex items-center gap-5 md:gap-12 border p-1 border-white border-opacity-10 text-white rounded-[2.5rem]">
+                    <li class="nav-link bg-carmine-pink"><a href="#">Home</a></li>
+                    <li class="nav-link"><a href="#">Service</a></li>
+                    <li class="nav-link"><a href="#">Contact</a></li>
+                    <li class="nav-link"><a href="#">About</a></li>
+                </ul>
+                <span class="sm:hidden cursor-pointer"><i class="fa-solid fa-bars text-white text-2xl"></i></span>
+            </nav>
+            <!-- Navbar End -->
+        </header>
         <main></main>
         <footer></footer>
     </body>
