Deleted Unnexessary Files

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             .nav-link {
                 @apply px-5 py-2 hover:bg-carmine-pink rounded-4xl transition-colors duration-500 cursor-pointer;
             }
-            .container {
+            .wrapper {
                 @apply max-w-[90rem] mx-auto;
             }
 
@@ -41,7 +41,7 @@
           </style>
 	</head>
 	<body class="font-inter bg-black">
-        <header class="container bg-gradient-to-b from-[#111111] to-[rgba(119,119,119, 0)]">
+        <header class="wrapper bg-gradient-to-b from-[#111111] to-[rgba(119,119,119, 0)]">
             <!-- Navbar Start -->
             <nav class="flex justify-between items-center px-5 py-12 sm:px-8 lg:px-20 xl:px-48 xl:py-14">
                 <h2 class="text-4xl text-carmine-pink italic font-extrabold cursor-pointer">Fitness</h2>
@@ -84,8 +84,13 @@
                     </div>
                 </div>
              </section>
+             <!-- Banner End -->
         </header>
-        <main></main>
+        <main>
+            <section class="wrapper">
+
+            </section>
+        </main>
         <footer></footer>
     </body>
 </html>
