Trainings and Exercises section Complete

--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
 				</div>
 				<!-- Run Card -->
 				<div
-					class="grid grid-cols-1 sm:grid-cols-2 place-items-center gap-7 p-8 my-14 bg-[#222222] rounded-2xl"
+					class="grid grid-cols-1 sm:grid-cols-2 place-items-center gap-7 p-8 mt-14 bg-[#222222] rounded-2xl"
 				>
 					<!-- content -->
 					<div>
@@ -263,6 +263,103 @@
 				</div>
 			</section>
 			<!-- Change Habits Section End -->
+			<!-- Trainings and Exercises Section Start -->
+			<section>
+				<h1 class="text-white text-3xl md:text-5xl mb-4 font-extrabold">Trainings and Exercises</h1>
+				<p class="text-sm max-w-md leading-6">
+					We believe fitness should be accessible to everyone,
+					everywhere, regardless of income or access to a gym.
+				</p>
+
+				<!-- Exercise Cards -->
+				<div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-5 mt-14">
+					<!-- card 1 -->
+					<div
+						class="relative grid hover:place-items-center bg-[url(images/exercise1.jpg)] bg-cover bg-center min-h-32 h-52 max-h-52 group"
+					>
+						<!-- Semi-Transparent cyan Overlay -->
+						<div
+							class="absolute inset-0 bg-[#06ffd180] pointer-events-none opacity-50 group-hover:opacity-100 transition-opacity duration-500 delay-150"
+						></div>
+						<!-- Text Content -->
+						<span
+							class="absolute group-hover:static group-hover:scale-125 bottom-[12%] left-6 text-sm font-medium max-w-3/4 text-white transition-all duration-500 ease-out text-center"
+							>Stretching</span
+						>
+					</div>
+					<!-- card 2 -->
+					<div
+						class="relative grid hover:place-items-center bg-[url(images/exercise2.png)] bg-cover bg-center min-h-32 h-52 max-h-52 md:col-span-3 group"
+					>
+						<!-- Semi-Transparent Red Overlay -->
+						<div
+							class="absolute inset-0 bg-[#ff00004d] pointer-events-none opacity-50 group-hover:opacity-100 transition-opacity duration-500 delay-150"
+						></div>
+						<!-- Text Content -->
+						<span
+							class="absolute group-hover:static group-hover:scale-125 top-[12%] left-6 text-sm font-medium max-w-3/4 text-white transition-all duration-500 ease-out text-center"
+							>Push Ups</span
+						>
+					</div>
+					<!-- card 3 -->
+					<div
+						class="relative grid hover:place-items-center bg-[url(images/exercise3.png)] bg-cover bg-center min-h-32 h-52 max-h-52 group"
+					>
+						<!-- Semi-Transparent Black Overlay -->
+						<div
+							class="absolute inset-0 bg-[#00000080] pointer-events-none opacity-50 group-hover:opacity-100 transition-opacity duration-500 delay-150"
+						></div>
+						<!-- Text Content -->
+						<span
+							class="absolute group-hover:static group-hover:scale-125 bottom-[12%] left-6 text-sm font-medium max-w-3/4 text-white transition-all duration-500 ease-out text-center"
+							>Leg Workout</span
+						>
+					</div>
+					<!-- card 4 -->
+					<div
+						class="relative grid hover:place-items-center bg-[url(images/exercise4.png)] bg-cover bg-center min-h-32 h-52 max-h-52 md:col-span-3 group"
+					>
+						<!-- Semi-Transparent Black Overlay -->
+						<div
+							class="absolute inset-0 bg-[#00000080] pointer-events-none opacity-50 group-hover:opacity-100 transition-opacity duration-500 delay-150"
+						></div>
+						<!-- Text Content -->
+						<span
+							class="absolute group-hover:static group-hover:scale-125 bottom-[12%] left-6 text-sm font-medium max-w-3/4 text-white transition-all duration-500 ease-out text-center"
+							>Warm Up - Before Heavy Lifting</span
+						>
+					</div>
+					<!-- card 5 -->
+					<div
+						class="relative grid hover:place-items-center bg-[url(images/exercise5.jpg)] bg-cover bg-center min-h-32 h-52 max-h-52 group"
+					>
+						<!-- Semi-Transparent Green Overlay -->
+						<div
+							class="absolute inset-0 bg-[#42ff004d] pointer-events-none opacity-50 group-hover:opacity-100 transition-opacity duration-500 delay-150"
+						></div>
+						<!-- Text Content -->
+						<span
+							class="absolute group-hover:static group-hover:scale-125 bottom-[12%] left-6 text-sm font-medium max-w-3/4 text-white transition-all duration-500 ease-out text-center"
+							>Yoga - Stay Healthy</span
+						>
+					</div>
+					<!-- card 6 -->
+					<div
+						class="relative grid hover:place-items-center bg-[url(images/exercise6.jpg)] bg-cover bg-center min-h-32 h-52 max-h-52 group"
+					>
+						<!-- Semi-Transparent Blue Overlay -->
+						<div
+							class="absolute inset-0 bg-[#0047ff4d] pointer-events-none opacity-50 group-hover:opacity-100 transition-opacity duration-500 delay-150"
+						></div>
+						<!-- Text Content -->
+						<span
+							class="absolute group-hover:static group-hover:scale-125 bottom-[12%] left-6 text-sm font-medium max-w-3/4 text-white transition-all duration-500 ease-out text-center"
+							>Sit Ups - Loose Belly Fats</span
+						>
+					</div>
+				</div>
+			</section>
+			<!-- Trainings and Exercises Section End -->
 		</main>
 		<footer></footer>
 	</body>
