--- a/index.html
+++ b/index.html
@@ -493,80 +493,108 @@
 								</p>
 							</div>
 							<!-- Calculator -->
-							<form
-								class="grid gap-3 grid-cols-2 text-white"
-								action=""
-							>
-								<input
-									class="bg-white/30 py-3 pl-5 rounded-lg"
-									type="number"
-									placeholder="Height/cm"
-								/>
-								<input
-									class="bg-white/30 py-3 pl-5 rounded-lg"
-									type="number"
-									placeholder="Weight/kg"
-								/>
-								<input
-									class="bg-white/30 py-3 pl-5 rounded-lg"
-									type="number"
-									placeholder="Age"
-								/>
-								<select
-									class="bg-white/30 py-3 pl-5 rounded-lg text-white/60"
-									name="Sex"
-									id=""
+							<form action="">
+								<div
+									class="grid gap-3 grid-cols-2 text-white mb-5"
 								>
-									<option
-										class="bg-slate-600"
-										value=""
-										disabled
-										selected
+									<input
+										class="bg-white/30 py-3 pl-5 rounded-lg"
+										type="number"
+										placeholder="Height/cm"
+										name="height"
+										required
+									/>
+									<input
+										class="bg-white/30 py-3 pl-5 rounded-lg"
+										type="number"
+										placeholder="Weight/kg"
+										name="weight"
+										required
+									/>
+									<input
+										class="bg-white/30 py-3 pl-5 rounded-lg"
+										type="number"
+										placeholder="Age"
+										name="age"
+										required
+									/>
+									<select
+										class="bg-white/30 py-3 pl-5 rounded-lg text-white"
+										name="Sex"
+										required
 									>
-										Sex
-									</option>
-									<option class="bg-slate-600" value="Male">
-										Male
-									</option>
-									<option class="bg-slate-600" value="Female">
-										Female
-									</option>
-									<option class="bg-slate-600" value="Others">
-										Others
-									</option>
-								</select>
-								<select
-									class="col-span-2 bg-white/30 py-3 pl-5 rounded-lg text-white/60"
-									name="Sex"
-									id=""
-								>
-									<option
-										class="bg-slate-600"
-										value=""
-										disabled
-										selected
+										<option
+											class="bg-slate-600"
+											value=""
+											disabled
+											selected
+										>
+											Sex
+										</option>
+										<option
+											class="bg-slate-600"
+											value="Male"
+										>
+											Male
+										</option>
+										<option
+											class="bg-slate-600"
+											value="Female"
+										>
+											Female
+										</option>
+										<option
+											class="bg-slate-600"
+											value="Others"
+										>
+											Others
+										</option>
+									</select>
+									<select
+										class="col-span-2 bg-white/30 py-3 pl-5 rounded-lg text-white"
+										name="activity"
+										required
 									>
-										Select an activity factor
-									</option>
-									<option class="bg-slate-600" value="Male">
-										Push Up
-									</option>
-									<option class="bg-slate-600" value="Female">
-										Yoga
-									</option>
-									<option class="bg-slate-600" value="Others">
-										Bench Press
-									</option>
-									<option class="bg-slate-600" value="Others">
-										None
-									</option>
-								</select>
+										<option
+											class="bg-slate-600"
+											value=""
+											disabled
+											selected
+										>
+											Select an activity factor
+										</option>
+										<option
+											class="bg-slate-600"
+											value="Male"
+										>
+											Push Up
+										</option>
+										<option
+											class="bg-slate-600"
+											value="Female"
+										>
+											Yoga
+										</option>
+										<option
+											class="bg-slate-600"
+											value="Others"
+										>
+											Bench Press
+										</option>
+										<option
+											class="bg-slate-600"
+											value="Others"
+										>
+											None
+										</option>
+									</select>
+								</div>
+								<input
+									class="btn bg-carmine-pink border-carmine-pink"
+									type="submit"
+									value="Calculate"
+								/>
 							</form>
-							<button
-								class="btn bg-carmine-pink border-carmine-pink"
-							>
-								Calculate
-							</button>
 						</div>
 					</div>
 				</section>
