Our Teams Section Complete

--- a/index.html
+++ b/index.html
@@ -285,6 +285,7 @@
 				</div>
 			</section>
 			<!-- Change Habits Section End -->
+
 			<!-- Trainings and Exercises Section Start -->
 			<section class="wrapper">
 				<h1 class="text-white text-3xl md:text-5xl mb-4 font-extrabold">
@@ -386,6 +387,7 @@
 				</div>
 			</section>
 			<!-- Trainings and Exercises Section End -->
+
 			<!-- BMI Calculator Section Start -->
 			<section class="wrapper">
 				<h1 class="text-white text-3xl md:text-5xl mb-4 font-extrabold">
@@ -599,6 +601,123 @@
 					</div>
 				</section>
 			</div>
+			<!-- BMI Calculator Section End -->
+
+			<!-- Our Teams Section Start -->
+			<section class="wrapper">
+				<!-- content -->
+				<div class="text-center space-y-3 mb-14">
+					<h1 class="text-white text-3xl md:text-5xl font-extrabold">
+						Meet Our Team
+					</h1>
+					<p class="text-sm max-w-md mx-auto leading-6">
+						We believe fitness should be accessible to everyone,
+						everywhere, regardless of income or access to a gym.
+					</p>
+				</div>
+				<!-- Teams -->
+				<div
+					class="bg-[#222222] rounded-2xl grid gap-5 grid-cols-1 sm:grid-cols-2 md:grid-cols-3 p-5"
+				>
+					<!-- team 1 -->
+					<div
+						class="relative bg-[url('images/trainer1.png')] bg-no-repeat bg-center bg-cover min-h-64 h-20 rounded-2xl"
+					>
+						<!-- Overlay -->
+						<div
+							class="absolute inset-0 bg-black/20 pointer-events-none"
+						></div>
+						<!-- text -->
+						<div class="absolute bottom-3 left-3">
+							<h4 class="text-white text-xl font-bold">
+								Jerome Bell
+							</h4>
+							<span class="text-sm text-white/50">Trainer</span>
+						</div>
+					</div>
+					<!-- team 2 -->
+					<div
+						class="relative bg-[url('images/trainer2.png')] bg-no-repeat bg-center bg-cover min-h-64 h-20 rounded-2xl"
+					>
+						<!-- Overlay -->
+						<div
+							class="absolute inset-0 bg-black/20 pointer-events-none"
+						></div>
+						<!-- text -->
+						<div class="absolute bottom-3 left-3">
+							<h4 class="text-white text-xl font-bold">
+								Cameron Williamson
+							</h4>
+							<span class="text-sm text-white/50">Trainer</span>
+						</div>
+					</div>
+					<!-- team 3 -->
+					<div
+						class="relative bg-[url('images/trainer3.png')] bg-no-repeat bg-center bg-cover min-h-64 h-20 rounded-2xl"
+					>
+						<!-- Overlay -->
+						<div
+							class="absolute inset-0 bg-black/20 pointer-events-none"
+						></div>
+						<!-- text -->
+						<div class="absolute bottom-3 left-3">
+							<h4 class="text-white text-xl font-bold">
+								Darrell Steward
+							</h4>
+							<span class="text-sm text-white/50">Trainer</span>
+						</div>
+					</div>
+					<!-- team 4 -->
+					<div
+						class="relative bg-[url('images/trainer4.png')] bg-no-repeat bg-center bg-cover min-h-64 h-20 rounded-2xl"
+					>
+						<!-- Overlay -->
+						<div
+							class="absolute inset-0 bg-black/20 pointer-events-none"
+						></div>
+						<!-- text -->
+						<div class="absolute bottom-3 left-3">
+							<h4 class="text-white text-xl font-bold">
+								Dianne Russell
+							</h4>
+							<span class="text-sm text-white/50">Trainer</span>
+						</div>
+					</div>
+					<!-- team 5 -->
+					<div
+						class="relative bg-[url('images/trainer5.png')] bg-no-repeat bg-center bg-cover min-h-64 h-20 rounded-2xl"
+					>
+						<!-- Overlay -->
+						<div
+							class="absolute inset-0 bg-black/20 pointer-events-none"
+						></div>
+						<!-- text -->
+						<div class="absolute bottom-3 left-3">
+							<h4 class="text-white text-xl font-bold">
+								Cody Fisher
+							</h4>
+							<span class="text-sm text-white/50">Trainer</span>
+						</div>
+					</div>
+					<!-- team 6 -->
+					<div
+						class="relative bg-[url('images/trainer6.png')] bg-no-repeat bg-center bg-cover min-h-64 h-20 rounded-2xl"
+					>
+						<!-- Overlay -->
+						<div
+							class="absolute inset-0 bg-black/20 pointer-events-none"
+						></div>
+						<!-- text -->
+						<div class="absolute bottom-3 left-3">
+							<h4 class="text-white text-xl font-bold">
+								Theresa Webb
+							</h4>
+							<span class="text-sm text-white/50">Trainer</span>
+						</div>
+					</div>
+				</div>
+			</section>
+			<!-- Our Teams Section End -->
 		</main>
 		<footer></footer>
 	</body>
