Footer Design Complete

--- a/index.html
+++ b/index.html
@@ -719,6 +719,58 @@
 			</section>
 			<!-- Our Teams Section End -->
 		</main>
-		<footer></footer>
+		<footer class="bg-[#222222]">
+			<div
+				class="wrapper gap-12 md:gap-24 grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 px-5 py-12 sm:px-8 lg:px-20 xl:px-44 xl:py-14"
+			>
+				<!-- 1st Column -->
+				<div class="sm:col-span-2 lg:col-span-1">
+					<h1
+						class="text-5xl mb-5 md:text-7xl text-carmine-pink font-extrabold italic"
+					>
+						Fitness
+					</h1>
+					<p class="text-sm">
+						We believe fitness should be accessible to everyone,
+						everywhere, regardless of income or access to a gym.
+						With hundreds of professional workouts.
+					</p>
+				</div>
+				<!-- 2nd Column -->
+				<div class="">
+					<h3 class="text-3xl mb-5 sm:mb-10 font-bold text-white">
+						Get Started
+					</h3>
+					<ul
+						class="text-white/50 text-lg md:text-2xl space-y-3 md:space-y-5"
+					>
+						<li><a href="#">Service</a></li>
+						<li><a href="#">Contact Us</a></li>
+						<li><a href="#">Affiliate Program</a></li>
+						<li><a href="#">About Us</a></li>
+					</ul>
+				</div>
+				<!-- 3rd Column -->
+				<div class="">
+					<h3 class="text-3xl mb-5 sm:mb-10 font-bold text-white">
+						Get Started
+					</h3>
+					<ul
+						class="text-white/50 text-lg md:text-2xl space-y-3 md:space-y-5"
+					>
+						<li><a href="#">Fitness</a></li>
+						<li><a href="#">Platform</a></li>
+						<li><a href="#">Workout Library</a></li>
+						<li><a href="#">App Design</a></li>
+					</ul>
+				</div>
+			</div>
+			<hr class="border-white/50 shadow-lg wrapper" />
+			<div class="text-center py-8">
+				<p class="text-sm sm:text-xl">
+					All right reserved &copy;Fitness 2025
+				</p>
+			</div>
+		</footer>
 	</body>
 </html>
